--- a/index.html
+++ b/index.html
@@ -423,8 +423,8 @@ background-size: cover;
 <article>
 <p>Start with data from a main effects model (ORs of 1.2, 1.7, 2.5)</p>
 
-<p><img src="figure/Fig1a.png" style="width:400px; float: left; margin-bottom: 15px; margin-right:3px">
-<img src="figure/Fig1b.png" style="width:400px; float: left; margin-bottom: 15px; margin-right:3px"></p>
+<p><img src="figure/Fig1a.png" style="height:380px; float: left; margin-bottom: 15px; margin-right:3px">
+<img src="figure/Fig1b.png" style="height:380px; float: left; margin-bottom: 15px; margin-right:3px"></p>
 
 <p style="clear:both;"></p>
 
